scrollbar final fix

--- a/Front-end/src/app/components/forecastcard/forecastcard.component.css
+++ b/Front-end/src/app/components/forecastcard/forecastcard.component.css
@@ -4,6 +4,5 @@
 .info::-webkit-scrollbar-thumb {
     background-color: #39394c;
     border-radius: 0.5rem;
-    width: 200px;
 }
   
